[package]
name = "signing-server"
version = "0.1.0"
edition = "2024"
default-run = "signing-server"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[dependencies]
ureq = { version = "3.1.4", features = ["json"] }
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethereum-types = "0.14"
rlp = "0.5"
sha3 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
secp256k1 = { version = "0.28", features = ["recovery"] }
dotenvy = "0.15"
rand = "0.8"
